// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Meta renders with mandatory props 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: grid;
  row-gap: 24px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    grid-template-columns: 1fr;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    grid-template-columns: 1fr 2fr;
  }
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    grid-template-areas: "intro" "divider" "buttons" "dividerEnd";
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    grid-template-areas: "intro" "buttons";
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    grid-template-areas: "intro buttons" "divider divider";
  }
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    margin-block-end: 48px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-block-end: 32px;
  }
}

.emotion-1 {
  grid-area: intro;
}

.emotion-2 {
  margin: 0;
  padding: 0;
  display: grid;
  -webkit-column-gap: 32px;
  column-gap: 32px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-2 {
    grid-template-columns: 1fr min-content 1fr;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    grid-template-columns: min-content min-content min-content;
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-top: calc(-16px/2);
  margin-bottom: calc(-16px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(16px/2);
  margin-bottom: calc(16px/2);
}

.emotion-5 {
  font-family: Poppins,sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0em;
  padding: 0.5px 0px;
}

.emotion-5::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-5::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-6 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111c;
}

.emotion-6 svg {
  fill: #09111c;
}

.emotion-8 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 24px;
  padding-inline: 8px;
  padding-block: 4px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 24px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-radius: 8px;
  border-color: #017582;
  color: #ffffff;
  background-color: #017582;
}

.emotion-8 svg {
  width: 16px;
  height: 16px;
}

.emotion-9 {
  padding-inline: 4px;
  padding-block: 4px;
}

.emotion-10 {
  margin: 0;
  font-family: Poppins,sans-serif;
  font-size: 12px;
  line-height: 18px;
  font-weight: 500;
  letter-spacing: 0em;
  padding: 0.5px 0px;
}

.emotion-10::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-10::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-11 {
  border-style: solid;
  border-color: #dee2e5;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-top: calc(-24px/2);
  margin-bottom: calc(-24px/2);
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(24px/2);
  margin-bottom: calc(24px/2);
}

.emotion-17 {
  margin: 0;
  color: #3358cc;
  font-family: Poppins,sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 600;
  letter-spacing: 0em;
  padding: 0.5px 0px;
}

.emotion-17 svg {
  fill: #3358cc;
}

.emotion-17::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-17::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-18 {
  grid-area: divider;
}

.emotion-19 {
  border-style: solid;
  border-color: #dee2e5;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

.emotion-20 {
  grid-area: buttons;
}

.emotion-21 {
  margin: 0;
  padding: 0;
  display: grid;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: end;
  justify-content: end;
}

@media screen {
  .emotion-21 {
    row-gap: 16px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-21 {
    -webkit-column-gap: 16px;
    column-gap: 16px;
  }
}

@media screen and (max-width: 767px) {
  .emotion-21 {
    grid-template-columns: 1fr;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-21 {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media screen and (min-width: 1024px) {
  .emotion-21 {
    grid-template-columns: repeat(3, fit-content(100%));
  }
}

.emotion-22 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(2, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  min-width: 176px;
  min-height: 44px;
  padding-inline: 12px;
  padding-block: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 44px;
  min-width: auto;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-style: solid;
  border-color: #2e3f54;
  border-width: 1px;
  border-radius: 24px;
  color: #2e3f54;
  cursor: pointer;
}

.emotion-22 svg {
  width: 16px;
  height: 16px;
}

.emotion-22 svg {
  fill: #2e3f54;
}

.emotion-22:hover:not(:disabled) {
  background-color: #f0f1f3;
  border-color: #15263e;
}

.emotion-22:active:not(:disabled) {
  background-color: #dee2e5;
  border-color: #09111c;
}

.emotion-22:disabled {
  border-color: #dee2e5;
  color: #a1acb4;
}

.emotion-22:disabled svg {
  fill: #a1acb4;
}

.emotion-22:focus-visible:not(:disabled) {
  outline-color: #3768fb;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-22:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-22 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-22 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-23 {
  fill: #2e3f54;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-23 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-23 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-24 {
  margin: 0;
  font-family: Poppins,sans-serif;
  font-size: 12px;
  line-height: 18px;
  font-weight: 600;
  letter-spacing: 0em;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-24::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-24::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-25 {
  grid-area: dividerEnd;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <section
              class="emotion-5"
            >
              <h1
                class="nk-headline-heading emotion-6"
              >
                Status
              </h1>
            </section>
          </div>
          <div
            class="emotion-4"
          >
            <div
              class="emotion-8"
              data-testid="flag"
            >
              <div
                class="emotion-9"
              >
                <p
                  class="emotion-10"
                >
                  Supported
                </p>
              </div>
            </div>
          </div>
        </div>
        <hr
          aria-hidden="true"
          class="emotion-11"
          data-testid="divider"
        />
        <div
          class="emotion-12"
        >
          <div
            class="emotion-13"
          >
            <section
              class="emotion-5"
            >
              <h1
                class="nk-headline-heading emotion-6"
              >
                Introduced
              </h1>
            </section>
          </div>
          <div
            class="emotion-13"
          >
            <p
              class="emotion-17"
            >
              v0.1
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-18"
    >
      <hr
        aria-hidden="true"
        class="emotion-19"
        data-testid="divider"
      />
    </div>
    <div
      class="emotion-20"
    >
      <div
        class="emotion-21"
      >
        <a
          class="emotion-22"
          data-testid="buttonLink"
          href="https://github.com/newscorp-ghfb/newskit"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="emotion-23"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.9990792,2 C6.47773105,2 2,6.47565999 2,11.9970521 C2,16.4137976 4.86503576,20.1603908 8.83876117,21.4822847 C9.33908346,21.5743385 9.5214095,21.2656512 9.5214095,21.000536 C9.5214095,20.7636506 9.512815,20.1346157 9.50790386,19.3006075 C6.72635747,19.904481 6.13947635,17.9603029 6.13947635,17.9603029 C5.68458209,16.8053335 5.02894503,16.4978735 5.02894503,16.4978735 C4.12099819,15.878044 5.09770097,15.8903179 5.09770097,15.8903179 C6.10141502,15.9608925 6.62936247,16.9207077 6.62936247,16.9207077 C7.52134811,18.4481885 8.97013414,18.0069436 9.53982627,17.7510338 C9.63068234,17.1054292 9.88913104,16.6647979 10.174591,16.415025 C7.95414224,16.1627974 5.6195095,15.3048551 5.6195095,11.4741861 C5.6195095,10.3830406 6.00933116,9.49011794 6.64900703,8.79173579 C6.54587311,8.53889444 6.20270727,7.52200584 6.74722981,6.14610707 C6.74722981,6.14610707 7.5864207,5.87730972 9.4968538,7.17097368 C10.2943,6.94881697 11.150066,6.8383523 12.0003069,6.83405645 C12.849934,6.8383523 13.7050861,6.94881697 14.5037601,7.17097368 C16.4129654,5.87730972 17.2509285,6.14610707 17.2509285,6.14610707 C17.7966788,7.52200584 17.453513,8.53889444 17.350993,8.79173579 C17.9918966,9.49011794 18.3786488,10.3830406 18.3786488,11.4741861 C18.3786488,15.3146742 16.0403327,16.1597289 13.8131312,16.407047 C14.1716443,16.7157344 14.4914822,17.3257448 14.4914822,18.2585575 C14.4914822,19.5945663 14.4792044,20.6728241 14.4792044,21.000536 C14.4792044,21.2681059 14.6596888,21.5792481 15.1667639,21.481671 C19.1374198,20.1567087 22,16.4125702 22,11.9970521 C22,6.47565999 17.5222689,2 11.9990792,2"
              fill-rule="nonzero"
            />
          </svg>
          <span
            class="emotion-24"
          >
            View code
          </span>
        </a>
      </div>
    </div>
    <div
      class="emotion-25"
    >
      <hr
        aria-hidden="true"
        class="emotion-19"
        data-testid="divider"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Meta renders with mandatory props and figma button 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: grid;
  row-gap: 24px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    grid-template-columns: 1fr;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    grid-template-columns: 1fr 2fr;
  }
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    grid-template-areas: "intro" "divider" "buttons" "dividerEnd";
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    grid-template-areas: "intro" "buttons";
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    grid-template-areas: "intro buttons" "divider divider";
  }
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    margin-block-end: 48px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-block-end: 32px;
  }
}

.emotion-1 {
  grid-area: intro;
}

.emotion-2 {
  margin: 0;
  padding: 0;
  display: grid;
  -webkit-column-gap: 32px;
  column-gap: 32px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-2 {
    grid-template-columns: 1fr min-content 1fr;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    grid-template-columns: min-content min-content min-content;
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-top: calc(-16px/2);
  margin-bottom: calc(-16px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(16px/2);
  margin-bottom: calc(16px/2);
}

.emotion-5 {
  font-family: Poppins,sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0em;
  padding: 0.5px 0px;
}

.emotion-5::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-5::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-6 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111c;
}

.emotion-6 svg {
  fill: #09111c;
}

.emotion-8 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 24px;
  padding-inline: 8px;
  padding-block: 4px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 24px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-radius: 8px;
  border-color: #017582;
  color: #ffffff;
  background-color: #017582;
}

.emotion-8 svg {
  width: 16px;
  height: 16px;
}

.emotion-9 {
  padding-inline: 4px;
  padding-block: 4px;
}

.emotion-10 {
  margin: 0;
  font-family: Poppins,sans-serif;
  font-size: 12px;
  line-height: 18px;
  font-weight: 500;
  letter-spacing: 0em;
  padding: 0.5px 0px;
}

.emotion-10::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-10::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-11 {
  border-style: solid;
  border-color: #dee2e5;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-top: calc(-24px/2);
  margin-bottom: calc(-24px/2);
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(24px/2);
  margin-bottom: calc(24px/2);
}

.emotion-17 {
  margin: 0;
  color: #3358cc;
  font-family: Poppins,sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 600;
  letter-spacing: 0em;
  padding: 0.5px 0px;
}

.emotion-17 svg {
  fill: #3358cc;
}

.emotion-17::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-17::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-18 {
  grid-area: divider;
}

.emotion-19 {
  border-style: solid;
  border-color: #dee2e5;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

.emotion-20 {
  grid-area: buttons;
}

.emotion-21 {
  margin: 0;
  padding: 0;
  display: grid;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: end;
  justify-content: end;
}

@media screen {
  .emotion-21 {
    row-gap: 16px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-21 {
    -webkit-column-gap: 16px;
    column-gap: 16px;
  }
}

@media screen and (max-width: 767px) {
  .emotion-21 {
    grid-template-columns: 1fr;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-21 {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media screen and (min-width: 1024px) {
  .emotion-21 {
    grid-template-columns: repeat(3, fit-content(100%));
  }
}

.emotion-22 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(2, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  min-width: 176px;
  min-height: 44px;
  padding-inline: 12px;
  padding-block: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 44px;
  min-width: auto;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-style: solid;
  border-color: #2e3f54;
  border-width: 1px;
  border-radius: 24px;
  color: #2e3f54;
  cursor: pointer;
}

.emotion-22 svg {
  width: 16px;
  height: 16px;
}

.emotion-22 svg {
  fill: #2e3f54;
}

.emotion-22:hover:not(:disabled) {
  background-color: #f0f1f3;
  border-color: #15263e;
}

.emotion-22:active:not(:disabled) {
  background-color: #dee2e5;
  border-color: #09111c;
}

.emotion-22:disabled {
  border-color: #dee2e5;
  color: #a1acb4;
}

.emotion-22:disabled svg {
  fill: #a1acb4;
}

.emotion-22:focus-visible:not(:disabled) {
  outline-color: #3768fb;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-22:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-22 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-22 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-23 {
  fill: #2e3f54;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-23 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-23 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-24 {
  margin: 0;
  font-family: Poppins,sans-serif;
  font-size: 12px;
  line-height: 18px;
  font-weight: 600;
  letter-spacing: 0em;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-24::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-24::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-28 {
  grid-area: dividerEnd;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <section
              class="emotion-5"
            >
              <h1
                class="nk-headline-heading emotion-6"
              >
                Status
              </h1>
            </section>
          </div>
          <div
            class="emotion-4"
          >
            <div
              class="emotion-8"
              data-testid="flag"
            >
              <div
                class="emotion-9"
              >
                <p
                  class="emotion-10"
                >
                  Supported
                </p>
              </div>
            </div>
          </div>
        </div>
        <hr
          aria-hidden="true"
          class="emotion-11"
          data-testid="divider"
        />
        <div
          class="emotion-12"
        >
          <div
            class="emotion-13"
          >
            <section
              class="emotion-5"
            >
              <h1
                class="nk-headline-heading emotion-6"
              >
                Introduced
              </h1>
            </section>
          </div>
          <div
            class="emotion-13"
          >
            <p
              class="emotion-17"
            >
              v0.1
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-18"
    >
      <hr
        aria-hidden="true"
        class="emotion-19"
        data-testid="divider"
      />
    </div>
    <div
      class="emotion-20"
    >
      <div
        class="emotion-21"
      >
        <a
          class="emotion-22"
          data-testid="buttonLink"
          href="https://github.com/newscorp-ghfb/newskit"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="emotion-23"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.9990792,2 C6.47773105,2 2,6.47565999 2,11.9970521 C2,16.4137976 4.86503576,20.1603908 8.83876117,21.4822847 C9.33908346,21.5743385 9.5214095,21.2656512 9.5214095,21.000536 C9.5214095,20.7636506 9.512815,20.1346157 9.50790386,19.3006075 C6.72635747,19.904481 6.13947635,17.9603029 6.13947635,17.9603029 C5.68458209,16.8053335 5.02894503,16.4978735 5.02894503,16.4978735 C4.12099819,15.878044 5.09770097,15.8903179 5.09770097,15.8903179 C6.10141502,15.9608925 6.62936247,16.9207077 6.62936247,16.9207077 C7.52134811,18.4481885 8.97013414,18.0069436 9.53982627,17.7510338 C9.63068234,17.1054292 9.88913104,16.6647979 10.174591,16.415025 C7.95414224,16.1627974 5.6195095,15.3048551 5.6195095,11.4741861 C5.6195095,10.3830406 6.00933116,9.49011794 6.64900703,8.79173579 C6.54587311,8.53889444 6.20270727,7.52200584 6.74722981,6.14610707 C6.74722981,6.14610707 7.5864207,5.87730972 9.4968538,7.17097368 C10.2943,6.94881697 11.150066,6.8383523 12.0003069,6.83405645 C12.849934,6.8383523 13.7050861,6.94881697 14.5037601,7.17097368 C16.4129654,5.87730972 17.2509285,6.14610707 17.2509285,6.14610707 C17.7966788,7.52200584 17.453513,8.53889444 17.350993,8.79173579 C17.9918966,9.49011794 18.3786488,10.3830406 18.3786488,11.4741861 C18.3786488,15.3146742 16.0403327,16.1597289 13.8131312,16.407047 C14.1716443,16.7157344 14.4914822,17.3257448 14.4914822,18.2585575 C14.4914822,19.5945663 14.4792044,20.6728241 14.4792044,21.000536 C14.4792044,21.2681059 14.6596888,21.5792481 15.1667639,21.481671 C19.1374198,20.1567087 22,16.4125702 22,11.9970521 C22,6.47565999 17.5222689,2 11.9990792,2"
              fill-rule="nonzero"
            />
          </svg>
          <span
            class="emotion-24"
          >
            View code
          </span>
        </a>
        <a
          class="emotion-22"
          data-testid="buttonLink"
          href="https://github.com/newscorp-ghfb/newskit"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="emotion-23"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.3333 12C12.3333 11.0275 12.7196 10.0949 13.4073 9.40729C14.0949 8.71965 15.0275 8.33334 16 8.33334C16.9724 8.33334 17.9051 8.71965 18.5927 9.40729C19.2803 10.0949 19.6666 11.0275 19.6666 12C19.6666 12.9725 19.2803 13.9051 18.5927 14.5927C17.9051 15.2804 16.9724 15.6667 16 15.6667C15.0275 15.6667 14.0949 15.2804 13.4073 14.5927C12.7196 13.9051 12.3333 12.9725 12.3333 12V12Z"
              fill="#1ABCFE"
            />
            <path
              d="M5 19.3333C5 18.3609 5.38631 17.4282 6.07394 16.7406C6.76158 16.053 7.69421 15.6667 8.66667 15.6667H12.3333V19.3333C12.3333 20.3058 11.947 21.2384 11.2594 21.926C10.5718 22.6137 9.63913 23 8.66667 23C7.69421 23 6.76158 22.6137 6.07394 21.926C5.38631 21.2384 5 20.3058 5 19.3333V19.3333Z"
              fill="#0ACF83"
            />
            <path
              d="M12.3333 1V8.33333H16C16.9724 8.33333 17.9051 7.94703 18.5927 7.25939C19.2803 6.57176 19.6666 5.63913 19.6666 4.66667C19.6666 3.69421 19.2803 2.76158 18.5927 2.07394C17.9051 1.38631 16.9724 1 16 1L12.3333 1Z"
              fill="#FF7262"
            />
            <path
              d="M5 4.66667C5 5.63913 5.38631 6.57176 6.07394 7.25939C6.76158 7.94703 7.69421 8.33333 8.66667 8.33333H12.3333V1H8.66667C7.69421 1 6.76158 1.38631 6.07394 2.07394C5.38631 2.76158 5 3.69421 5 4.66667V4.66667Z"
              fill="#F24E1E"
            />
            <path
              d="M5 12C5 12.9725 5.38631 13.9051 6.07394 14.5927C6.76158 15.2804 7.69421 15.6667 8.66667 15.6667H12.3333V8.33334H8.66667C7.69421 8.33334 6.76158 8.71965 6.07394 9.40729C5.38631 10.0949 5 11.0275 5 12V12Z"
              fill="#A259FF"
            />
          </svg>
          <span
            class="emotion-24"
          >
            View Design
          </span>
        </a>
      </div>
    </div>
    <div
      class="emotion-28"
    >
      <hr
        aria-hidden="true"
        class="emotion-19"
        data-testid="divider"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Meta renders with mandatory props and version above v5 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: grid;
  row-gap: 24px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    grid-template-columns: 1fr;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    grid-template-columns: 1fr 2fr;
  }
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    grid-template-areas: "intro" "divider" "buttons" "dividerEnd";
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    grid-template-areas: "intro" "buttons";
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    grid-template-areas: "intro buttons" "divider divider";
  }
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    margin-block-end: 48px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-block-end: 32px;
  }
}

.emotion-1 {
  grid-area: intro;
}

.emotion-2 {
  margin: 0;
  padding: 0;
  display: grid;
  -webkit-column-gap: 32px;
  column-gap: 32px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-2 {
    grid-template-columns: 1fr min-content 1fr;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    grid-template-columns: min-content min-content min-content;
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-top: calc(-16px/2);
  margin-bottom: calc(-16px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(16px/2);
  margin-bottom: calc(16px/2);
}

.emotion-5 {
  font-family: Poppins,sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0em;
  padding: 0.5px 0px;
}

.emotion-5::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-5::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-6 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111c;
}

.emotion-6 svg {
  fill: #09111c;
}

.emotion-8 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 24px;
  padding-inline: 8px;
  padding-block: 4px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 24px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-radius: 8px;
  border-color: #017582;
  color: #ffffff;
  background-color: #017582;
}

.emotion-8 svg {
  width: 16px;
  height: 16px;
}

.emotion-9 {
  padding-inline: 4px;
  padding-block: 4px;
}

.emotion-10 {
  margin: 0;
  font-family: Poppins,sans-serif;
  font-size: 12px;
  line-height: 18px;
  font-weight: 500;
  letter-spacing: 0em;
  padding: 0.5px 0px;
}

.emotion-10::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-10::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-11 {
  border-style: solid;
  border-color: #dee2e5;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-top: calc(-24px/2);
  margin-bottom: calc(-24px/2);
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(24px/2);
  margin-bottom: calc(24px/2);
}

.emotion-17 {
  display: inline-block;
  color: #3358cc;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-17 {
    transition-property: color,fill;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-17 {
    transition-property: color,fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-17 svg {
  fill: #3358cc;
}

.emotion-17:hover:not(:disabled) {
  color: #254cac;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-17:hover:not(:disabled) svg {
  fill: #254cac;
}

.emotion-17:active:not(:disabled) {
  color: #14328d;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-17:active:not(:disabled) svg {
  fill: #14328d;
}

.emotion-17:visited:not(:disabled) {
  color: #6454e3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-17:visited:not(:disabled) svg {
  fill: #6454e3;
}

.emotion-17:visited:hover:not(:disabled) {
  color: #6454e3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-17:visited:hover:not(:disabled) svg {
  fill: #6454e3;
}

.emotion-17:focus-visible:not(:disabled) {
  outline-color: #3768fb;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-17:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-20 {
  margin: 0;
  font-family: Poppins,sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  letter-spacing: 0em;
  display: block;
}

.emotion-22 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e3f54;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-22 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-22 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-22.emotion-22 {
  width: 16px;
  height: 16px;
}

.emotion-24 {
  grid-area: divider;
}

.emotion-25 {
  border-style: solid;
  border-color: #dee2e5;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

.emotion-26 {
  grid-area: buttons;
}

.emotion-27 {
  margin: 0;
  padding: 0;
  display: grid;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: end;
  justify-content: end;
}

@media screen {
  .emotion-27 {
    row-gap: 16px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-27 {
    -webkit-column-gap: 16px;
    column-gap: 16px;
  }
}

@media screen and (max-width: 767px) {
  .emotion-27 {
    grid-template-columns: 1fr;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-27 {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media screen and (min-width: 1024px) {
  .emotion-27 {
    grid-template-columns: repeat(3, fit-content(100%));
  }
}

.emotion-28 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(2, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  min-width: 176px;
  min-height: 44px;
  padding-inline: 12px;
  padding-block: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 44px;
  min-width: auto;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-style: solid;
  border-color: #2e3f54;
  border-width: 1px;
  border-radius: 24px;
  color: #2e3f54;
  cursor: pointer;
}

.emotion-28 svg {
  width: 16px;
  height: 16px;
}

.emotion-28 svg {
  fill: #2e3f54;
}

.emotion-28:hover:not(:disabled) {
  background-color: #f0f1f3;
  border-color: #15263e;
}

.emotion-28:active:not(:disabled) {
  background-color: #dee2e5;
  border-color: #09111c;
}

.emotion-28:disabled {
  border-color: #dee2e5;
  color: #a1acb4;
}

.emotion-28:disabled svg {
  fill: #a1acb4;
}

.emotion-28:focus-visible:not(:disabled) {
  outline-color: #3768fb;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-28:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-28 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-28 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-29 {
  fill: #2e3f54;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-29 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-29 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-30 {
  margin: 0;
  font-family: Poppins,sans-serif;
  font-size: 12px;
  line-height: 18px;
  font-weight: 600;
  letter-spacing: 0em;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-30::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-30::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-31 {
  grid-area: dividerEnd;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <section
              class="emotion-5"
            >
              <h1
                class="nk-headline-heading emotion-6"
              >
                Status
              </h1>
            </section>
          </div>
          <div
            class="emotion-4"
          >
            <div
              class="emotion-8"
              data-testid="flag"
            >
              <div
                class="emotion-9"
              >
                <p
                  class="emotion-10"
                >
                  Supported
                </p>
              </div>
            </div>
          </div>
        </div>
        <hr
          aria-hidden="true"
          class="emotion-11"
          data-testid="divider"
        />
        <div
          class="emotion-12"
        >
          <div
            class="emotion-13"
          >
            <section
              class="emotion-5"
            >
              <h1
                class="nk-headline-heading emotion-6"
              >
                Introduced
              </h1>
            </section>
          </div>
          <div
            class="emotion-13"
          >
            <a
              class="emotion-17"
              href="https://github.com/newscorp-ghfb/newskit/releases/tag/v5.0.1"
              target="_blank"
            >
              <span
                class="emotion-18"
              >
                <span
                  class="emotion-19"
                >
                  <span
                    class="emotion-20"
                  >
                    v5.0.1
                  </span>
                </span>
                <span
                  class="emotion-19"
                >
                  <svg
                    class="emotion-22 emotion-23"
                    fill="currentColor"
                    focusable="false"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title>
                      External link
                    </title>
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                    />
                  </svg>
                </span>
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-24"
    >
      <hr
        aria-hidden="true"
        class="emotion-25"
        data-testid="divider"
      />
    </div>
    <div
      class="emotion-26"
    >
      <div
        class="emotion-27"
      >
        <a
          class="emotion-28"
          data-testid="buttonLink"
          href="https://github.com/newscorp-ghfb/newskit"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="emotion-29"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.9990792,2 C6.47773105,2 2,6.47565999 2,11.9970521 C2,16.4137976 4.86503576,20.1603908 8.83876117,21.4822847 C9.33908346,21.5743385 9.5214095,21.2656512 9.5214095,21.000536 C9.5214095,20.7636506 9.512815,20.1346157 9.50790386,19.3006075 C6.72635747,19.904481 6.13947635,17.9603029 6.13947635,17.9603029 C5.68458209,16.8053335 5.02894503,16.4978735 5.02894503,16.4978735 C4.12099819,15.878044 5.09770097,15.8903179 5.09770097,15.8903179 C6.10141502,15.9608925 6.62936247,16.9207077 6.62936247,16.9207077 C7.52134811,18.4481885 8.97013414,18.0069436 9.53982627,17.7510338 C9.63068234,17.1054292 9.88913104,16.6647979 10.174591,16.415025 C7.95414224,16.1627974 5.6195095,15.3048551 5.6195095,11.4741861 C5.6195095,10.3830406 6.00933116,9.49011794 6.64900703,8.79173579 C6.54587311,8.53889444 6.20270727,7.52200584 6.74722981,6.14610707 C6.74722981,6.14610707 7.5864207,5.87730972 9.4968538,7.17097368 C10.2943,6.94881697 11.150066,6.8383523 12.0003069,6.83405645 C12.849934,6.8383523 13.7050861,6.94881697 14.5037601,7.17097368 C16.4129654,5.87730972 17.2509285,6.14610707 17.2509285,6.14610707 C17.7966788,7.52200584 17.453513,8.53889444 17.350993,8.79173579 C17.9918966,9.49011794 18.3786488,10.3830406 18.3786488,11.4741861 C18.3786488,15.3146742 16.0403327,16.1597289 13.8131312,16.407047 C14.1716443,16.7157344 14.4914822,17.3257448 14.4914822,18.2585575 C14.4914822,19.5945663 14.4792044,20.6728241 14.4792044,21.000536 C14.4792044,21.2681059 14.6596888,21.5792481 15.1667639,21.481671 C19.1374198,20.1567087 22,16.4125702 22,11.9970521 C22,6.47565999 17.5222689,2 11.9990792,2"
              fill-rule="nonzero"
            />
          </svg>
          <span
            class="emotion-30"
          >
            View code
          </span>
        </a>
      </div>
    </div>
    <div
      class="emotion-31"
    >
      <hr
        aria-hidden="true"
        class="emotion-25"
        data-testid="divider"
      />
    </div>
  </div>
</DocumentFragment>
`;
